organise css, new arrow layout

--- a/index.html
+++ b/index.html
@@ -5,13 +5,20 @@
 	</head>
 	<body>
 		<div id="app">
-			<div class="slide-container">
-				<div class="class-container">
+			<div class="main-container">
+				<div class="category-container">
 
 				</div>
-				<div class="veh-item-container">
-					<div class="veh-arrow left"></div>
-					<div class="veh-arrow right"></div>
+				<div class="slider-container">
+					<div class="arrow-container">
+						<div class="arrow left"></div>
+					</div>
+					<div class="item-container">
+
+					</div>
+					<div class="arrow-container">
+						<div class="arrow right"></div>
+					</div>
 				</div>
 			</div>
 			<div class="info-container">
