--- a/ui/index.html
+++ b/ui/index.html
@@ -10,13 +10,13 @@
 
 				</div>
 				<div class="slider-container">
-					<div class="arrow-container">
+					<div id="arrow-left" class="arrow-container">
 						<div class="arrow left"></div>
 					</div>
 					<div class="item-container">
 
 					</div>
-					<div class="arrow-container">
+					<div id="arrow-right" class="arrow-container">
 						<div class="arrow right"></div>
 					</div>
 				</div>
