split css, make more readable

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/category.css">
+		<link rel="stylesheet" href="css/slider.css">
+		<link rel="stylesheet" href="css/info.css">
 	</head>
 	<body>
 		<div id="app">
