--- a/ui/index.html
+++ b/ui/index.html
@@ -24,8 +24,52 @@
 					</div>
 				</div>
 			</div>
-			<div class="info-container">
+			<!-- <div class="info-container">
 				
+			</div> -->
+			<div class="stats-container">
+				<div class="item">
+					<div class="label">Top Speed</div>
+					<div class="bar-container">
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>	
+					</div>				
+				</div>
+				<div class="item">
+					<div class="label">Acceleration</div>
+					<div class="bar-container">
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>	
+					</div>				
+				</div>
+				<div class="item">
+					<div class="label">Braking</div>
+					<div class="bar-container">
+						<div class="bar">
+							<div class="fill"></div>
+						</div>
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>	
+					</div>				
+				</div>
+				<div class="item">
+					<div class="label">Traction</div>
+					<div class="bar-container">
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>
+						<div class="bar"></div>	
+					</div>				
+				</div>
 			</div>
 		</div>
 	</body>
