move stats css into own file

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/category.css">
 		<link rel="stylesheet" href="css/slider.css">
 		<link rel="stylesheet" href="css/info.css">
+		<link rel="stylesheet" href="css/stats.css">
 	</head>
 	<body>
 		<div id="app">
@@ -24,52 +25,52 @@
 					</div>
 				</div>
 			</div>
-			<!-- <div class="info-container">
-				
-			</div> -->
-			<div class="stats-container">
-				<div class="item">
-					<div class="label">Top Speed</div>
-					<div class="bar-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>	
-					</div>				
-				</div>
-				<div class="item">
-					<div class="label">Acceleration</div>
-					<div class="bar-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>	
-					</div>				
-				</div>
-				<div class="item">
-					<div class="label">Braking</div>
-					<div class="bar-container">
-						<div class="bar">
-							<div class="fill"></div>
-						</div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>	
-					</div>				
-				</div>
-				<div class="item">
-					<div class="label">Traction</div>
-					<div class="bar-container">
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>
-						<div class="bar"></div>	
-					</div>				
-				</div>
+			<div class="info-container">
+				<div class="heading">Blisa</div>
+				<div class="stats-container">
+					<div class="item">
+						<div class="label">Top Speed</div>
+						<div class="bar-container">
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>	
+						</div>				
+					</div>
+					<div class="item">
+						<div class="label">Acceleration</div>
+						<div class="bar-container">
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>	
+						</div>				
+					</div>
+					<div class="item">
+						<div class="label">Braking</div>
+						<div class="bar-container">
+							<div class="bar">
+								<div class="fill"></div>
+							</div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>	
+						</div>				
+					</div>
+					<div class="item">
+						<div class="label">Traction</div>
+						<div class="bar-container">
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>
+							<div class="bar"></div>	
+						</div>				
+					</div>
+				</div>				
 			</div>
 		</div>
 	</body>
