--- a/ui/index.html
+++ b/ui/index.html
@@ -26,7 +26,9 @@
 				</div>
 			</div>
 			<div class="info-container">
-				<div class="heading">Blisa</div>
+				<div class="heading">
+					<div>Blisa</div>
+				</div>
 				<div class="stats-container">
 					<div class="item">
 						<div class="label">Top Speed</div>
@@ -70,7 +72,8 @@
 							<div class="bar"></div>	
 						</div>				
 					</div>
-				</div>				
+				</div>
+				<button class="info-button">Purchase</button>
 			</div>
 		</div>
 	</body>
