add simple color selector to info-container

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/slider.css">
 		<link rel="stylesheet" href="css/info.css">
 		<link rel="stylesheet" href="css/stats.css">
+		<link rel="stylesheet" href="css/color.css">
 	</head>
 	<body>
 		<div id="app">
@@ -72,6 +73,12 @@
 							<div class="bar"></div>	
 						</div>				
 					</div>
+				</div>
+				<div class="color-container">
+					<button class="item"></button>
+					<button class="item"></button>
+					<button class="item"></button>
+					<button class="item"></button>
 				</div>
 				<button class="info-button">Purchase</button>
 			</div>
