feat(ui/stats): init func
add stats.js with init func

- Initialise vehicle statistics pane

--- a/ui/index.html
+++ b/ui/index.html
@@ -31,48 +31,7 @@
 					<div>Blisa</div>
 				</div>
 				<div class="stats-container">
-					<div class="item">
-						<div class="label">Top Speed</div>
-						<div class="bar-container">
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>	
-						</div>				
-					</div>
-					<div class="item">
-						<div class="label">Acceleration</div>
-						<div class="bar-container">
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>	
-						</div>				
-					</div>
-					<div class="item">
-						<div class="label">Braking</div>
-						<div class="bar-container">
-							<div class="bar">
-								<div class="fill"></div>
-							</div>
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>	
-						</div>				
-					</div>
-					<div class="item">
-						<div class="label">Traction</div>
-						<div class="bar-container">
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>
-							<div class="bar"></div>	
-						</div>				
-					</div>
+					<!-- js/stats.js -->
 				</div>
 				<div class="color-container">
 					<button class="item"></button>
