feat(ui): category.css -> navbar.css

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="css/main.css">
-		<link rel="stylesheet" href="css/category.css">
+		<link rel="stylesheet" href="css/navbar.css">
 		<link rel="stylesheet" href="css/slider.css">
 		<link rel="stylesheet" href="css/info.css">
 		<link rel="stylesheet" href="css/stats.css">
@@ -11,7 +11,7 @@
 	<body>
 		<div id="app">
 			<div class="main-container">
-				<div class="category-container">
+				<div class="navbar">
 
 				</div>
 				<div class="slider-container">
