feat(ui/slider): .slider-container -> .slider

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,7 +14,7 @@
 				<div class="navbar">
 
 				</div>
-				<div class="slider-container">
+				<div class="slider">
 					<div id="arrow-left" class="arrow-container">
 						<div class="arrow left"></div>
 					</div>
