--- a/ui/index.html
+++ b/ui/index.html
@@ -11,20 +11,8 @@
 	<body>
 		<div id="app">
 			<div class="main-container">
-				<div class="navbar">
-
-				</div>
-				<div class="slider">
-					<div id="arrow-left" class="arrow-container">
-						<div class="arrow left"></div>
-					</div>
-					<div class="item-container">
-
-					</div>
-					<div id="arrow-right" class="arrow-container">
-						<div class="arrow right"></div>
-					</div>
-				</div>
+				<!-- js/navbar.js -->
+				<!-- js/slider.js -->
 			</div>
 			<div class="info-container">
 				<div class="heading">
