feat(ui/vehicle): remove info-container from html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/navbar.css">
 		<link rel="stylesheet" href="css/slider.css">
-		<link rel="stylesheet" href="css/info.css">
+		<link rel="stylesheet" href="css/vehicle-panel.css">
 		<link rel="stylesheet" href="css/stats.css">
 		<link rel="stylesheet" href="css/color.css">
 	</head>
@@ -13,19 +13,6 @@
 			<div class="main-container">
 				<!-- js/navbar.js -->
 				<!-- js/slider.js -->
-			</div>
-			<div class="info-container">
-				<div class="heading">
-					<div>Blisa</div>
-				</div>
-				<!-- js/stats.js -->
-				<div class="color-container">
-					<button class="item"></button>
-					<button class="item"></button>
-					<button class="item"></button>
-					<button class="item"></button>
-				</div>
-				<button class="info-button">Purchase</button>
 			</div>
 		</div>
 	</body>
