--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,9 @@
 				<!-- js/navbar.js -->
 				<!-- js/slider.js -->
 			</div>
+			<div class="close">
+				<div>+</div>
+			</div>
 		</div>
 	</body>
 	<script type="module" src="js/index.js"></script>
