feat(ui/widgets): empty css file

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/navbar.css">
 		<link rel="stylesheet" href="css/slider.css">
 		<link rel="stylesheet" href="css/stats.css">
+		<link rel="stylesheet" href="css/widgets.css">
 	</head>
 	<body>
 		<div id="app">
