feat(ui/loader): include loader css in html

--- a/ui/index.html
+++ b/ui/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="css/slider.css">
 		<link rel="stylesheet" href="css/stats.css">
 		<link rel="stylesheet" href="css/widgets.css">
+		<link rel="stylesheet" href="css/loader.css">
 	</head>
 	<body>
 		<div id="app">
