feat(ui): small cleanup

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>vehicle-catalog-ui</title>
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/navbar.css">
 		<link rel="stylesheet" href="css/slider.css">
 		<link rel="stylesheet" href="css/stats.css">
 		<link rel="stylesheet" href="css/widgets.css">
 		<link rel="stylesheet" href="css/loader.css">
+		<script defer type="module" src="js/index.js"></script>
 	</head>
 	<body>
 		<div id="app">
-			<div class="main-container">
-				<!-- js/navbar.js -->
-				<!-- js/slider.js -->
-			</div>
+			<div class="main-container"></div>
 		</div>
 	</body>
-	<script type="module" src="js/index.js"></script>
 </html>
